<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_name"
            android:autofillHints="name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etItemCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_cost"
            android:inputType="number"
            android:autofillHints="none"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_item"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinnerItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnSelectItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_item"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvSelectedItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_selected_items"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnShowTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_total"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvTotalCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_total_cost"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</ScrollView>